added dependency matrix creation

--- a/Frederick's task (1).ipynb
+++ b/Frederick's task (1).ipynb
@@ -134,16 +134,22 @@
    "source": [
     "#%% narrow sentences down to only those with drug-gene relationships\n",
     "usable_sentences = []\n",
-    "\n",
+    "set_drugs = set(drugs)\n",
+    "set_genes = set(genes)\n",
     "\n",
     "\n",
     "for sentence in sentences:\n",
-    "    token_sentence = set(nltk.tokenize.word_tokenize(sentence))\n",
-    "    for drug in drugs:\n",
-    "        if drug in sentence:\n",
-    "            for gene in genes:\n",
-    "                if gene in sentence:\n",
-    "                    usable_sentences.append(sentence)\n"
+    "    drug, gene = False, False\n",
+    "    token_sentence = nltk.tokenize.word_tokenize(sentence)\n",
+    "    for token in token_sentence:\n",
+    "        if token in set_drugs:\n",
+    "            drug = True\n",
+    "        elif token in set_gene:\n",
+    "            gene = True\n",
+    "        if drug and gene:\n",
+    "            usable_sentences.append(sentence)\n",
+    "            break\n",
+    "\n"
    ]
   },
   {
@@ -164,11 +170,13 @@
     "# Write to csv file \n",
     "import csv\n",
     "\n",
-    "iterable_data = []  \n",
+    "iterable_data = [[sentence] for sentence in all_unique_biomedical_sentences]  \n",
     "# data to be written row-wise in csv fil\n",
+    "\"\"\"\n",
     "for sentence in all_unique_biomedical_sentences:\n",
     "    iterable_data.append([sentence])\n",
-    "  \n",
+    "\"\"\"\n",
+    "\n",
     "# opening the csv file in 'w+' mode\n",
     "file = open('biomedical sentences.csv', 'w+', newline ='')\n",
     "  \n",
