--- a/Frederick's task (1).ipynb
+++ b/Frederick's task (1).ipynb
@@ -132,24 +132,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% narrow sentences down to only those with drug-gene relationships\n",
-    "usable_sentences = []\n",
-    "set_drugs = set(drugs)\n",
-    "set_genes = set(genes)\n",
-    "\n",
-    "\n",
-    "for sentence in sentences:\n",
-    "    drug, gene = False, False\n",
-    "    token_sentence = nltk.tokenize.word_tokenize(sentence)\n",
-    "    for token in token_sentence:\n",
-    "        if token in set_drugs:\n",
-    "            drug = True\n",
-    "        elif token in set_gene:\n",
-    "            gene = True\n",
-    "        if drug and gene:\n",
-    "            usable_sentences.append(sentence)\n",
-    "            break\n",
-    "\n"
+    "#%% narrow sentences down to only those with drug-gene relationships\r\n",
+    "usable_sentences = []\r\n",
+    "set_drugs = set(drugs)\r\n",
+    "set_genes = set(genes)\r\n",
+    "\r\n",
+    "\r\n",
+    "for sentence in sentences:\r\n",
+    "    drug, gene = False, False\r\n",
+    "    token_sentence = nltk.tokenize.word_tokenize(sentence)\r\n",
+    "    for token in token_sentence:\r\n",
+    "        if token in set_drugs:\r\n",
+    "            drug = True\r\n",
+    "        elif token in set_genes:\r\n",
+    "            gene = True\r\n",
+    "        if drug and gene:\r\n",
+    "            usable_sentences.append(sentence)\r\n",
+    "            break\r\n",
+    "\r\n"
    ]
   },
   {
