--- a/module3/Co-occurrency Matrix/Co-occurrency.ipynb
+++ b/module3/Co-occurrency Matrix/Co-occurrency.ipynb
@@ -25,10 +25,10 @@
     "\r\n",
     "\r\n",
     "Con_mat = np.zeros((n, n), dtype=int) \r\n",
-    "for iter_num in range(1000):\r\n",
+    "for k in range(1000):\r\n",
     "    ebc = EBC(matrix, [7, 25], 10, 1e-10, 0.01)\r\n",
     "    cXY, objective, iter = ebc.run()\r\n",
-    "    clusters = cXY[0]\r\n",
+    "    clusters = cXY[0]       # only drug-gene pair cluster assignments\r\n",
     "    for i in range(n):\r\n",
     "        C = clusters[i]\r\n",
     "        for j in range(i, n):\r\n",
