--- a/module3/Co-occurrency Matrix/Co-occurrency.ipynb
+++ b/module3/Co-occurrency Matrix/Co-occurrency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import numpy as np\r\n",
     "from ebc import EBC \r\n",
@@ -25,10 +25,10 @@
     "\r\n",
     "\r\n",
     "Con_mat = np.zeros((n, n), dtype=int) \r\n",
-    "for k in range(1000):\r\n",
+    "for iter_num in range(1000):\r\n",
     "    ebc = EBC(matrix, [30, 125], 10, 1e-10, 0.01)\r\n",
     "    cXY, objective, iter = ebc.run()\r\n",
-    "    clusters = cXY[0]       # only drug-gene pair cluster assignments\r\n",
+    "    clusters = cXY[0]\r\n",
     "    for i in range(n):\r\n",
     "        C = clusters[i]\r\n",
     "        for j in range(i, n):\r\n",
@@ -40,19 +40,7 @@
     "\r\n",
     "np.savetxt(\"Co-occurrency_Mat.csv\", Con_mat, delimiter=',')\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ebc'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-f676f9dbb899>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mebc\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEBC\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmatrix\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSparseMatrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"resources/matrix-ebc-paper-dense.tsv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ebc'"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -72,7 +60,101 @@
     "df = df.sort_index()  # sorting by index              \r\n",
     "df.head()  \r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                  drug-gene row indicies              dependency path  \\\n",
+       "0  (flavopiridol,nf-kappab)            0  [prep_by, activation, amod]   \n",
+       "1           (tnf-r2,tnf-r1)            1     [appos, receptor, appos]   \n",
+       "2           (tnf-r2,tnf-r1)            1    [pobj, to, dep, to, pobj]   \n",
+       "3           (tnf-r2,tnf-r1)            1  [amod, expression, prep_of]   \n",
+       "4               (il-2,il-5)            2          [appos, csf, appos]   \n",
+       "\n",
+       "  column indicies certainty  \n",
+       "0             781       1.0  \n",
+       "1             413       1.0  \n",
+       "2            1125       1.0  \n",
+       "3            1179       1.0  \n",
+       "4              24       1.0  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>drug-gene</th>\n",
+       "      <th>row indicies</th>\n",
+       "      <th>dependency path</th>\n",
+       "      <th>column indicies</th>\n",
+       "      <th>certainty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(flavopiridol,nf-kappab)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[prep_by, activation, amod]</td>\n",
+       "      <td>781</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(tnf-r2,tnf-r1)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[appos, receptor, appos]</td>\n",
+       "      <td>413</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(tnf-r2,tnf-r1)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[pobj, to, dep, to, pobj]</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(tnf-r2,tnf-r1)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[amod, expression, prep_of]</td>\n",
+       "      <td>1179</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(il-2,il-5)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[appos, csf, appos]</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
    "metadata": {}
   },
   {
